Phase 4/y.output
Terminais não utilizados na gramática

   RESERVED


Gramática

    0 $accept: Prog $end

    1 Prog: ProgHeading ';' ProgBlock '.'

    2 ProgHeading: PROGRAM ID '(' OUTPUT ')'

    3 ProgBlock: varPart funcPart StatPart

    4 varPart: VAR VarDeclaration ';' VarDeclarationRepeat
    5        | %empty

    6 VarDeclarationRepeat: VarDeclaration ';' VarDeclarationRepeat
    7                     | %empty

    8 VarDeclaration: IDList ':' ID

    9 IDList: ID IDListRepeat

   10 IDListRepeat: ',' ID IDListRepeat
   11             | %empty

   12 funcPart: FuncDeclaration ';' FuncDeclRepeat
   13         | %empty

   14 FuncDeclRepeat: FuncDeclaration ';' FuncDeclRepeat
   15               | %empty

   16 FuncDeclaration: FuncHeading ';' FORWARD
   17                | FUNCTION ID ';' varPart StatPart
   18                | FuncHeading ';' varPart StatPart

   19 FuncHeading: FUNCTION ID FormalParamList ':' ID

   20 FormalParamList: '(' FormalParams FormalParamListRepeat ')'
   21                | %empty

   22 FormalParamListRepeat: ';' FormalParams FormalParamListRepeat
   23                      | %empty

   24 FormalParams: IDList ':' ID
   25             | VAR IDList ':' ID

   26 StatPart: CompStat

   27 CompStat: BEG StatList END

   28 StatList: Stat StatListRepeat

   29 StatListRepeat: ';' Stat StatListRepeat
   30               | %empty

   31 Stat: CompStat
   32     | IF Expr THEN Stat
   33     | IF Expr THEN Stat ELSE Stat
   34     | WHILE Expr DO Stat
   35     | REPEAT StatList UNTIL Expr
   36     | VAL '(' PARAMSTR '(' Expr ')' ',' ID ')'
   37     | ID ASSIGN Expr
   38     | WRITELN WriteInPList
   39     | %empty

   40 WriteInPList: '(' Optional WriteInPListOptional ')'
   41             | %empty

   42 WriteInPListOptional: ',' Optional WriteInPListOptional
   43                     | %empty

   44 Optional: Expr
   45         | STRING

   46 Expr: SimpleExpr
   47     | SimpleExpr RELATIONALOP SimpleExpr

   48 SimpleExpr: ADDOP Term
   49           | SimpleExpr ADDOP Term
   50           | SimpleExpr OR Term
   51           | Term

   52 Term: Factor
   53     | Term MULTOP Factor

   54 Factor: '(' Expr ')'
   55       | NOT Factor
   56       | INTEGER
   57       | REAL
   58       | ID
   59       | ID ParamList

   60 ParamList: '(' Expr ParamListOptional ')'

   61 ParamListOptional: ',' Expr ParamListOptional
   62                  | %empty


Terminais, com as regras aonde aparecem

$end (0) 0
'(' (40) 2 20 36 40 54 60
')' (41) 2 20 36 40 54 60
',' (44) 10 36 42 61
'.' (46) 1
':' (58) 8 19 24 25
';' (59) 1 4 6 12 14 16 17 18 22 29
error (256)
BEG (258) 27
DO (259) 34
IF (260) 32 33
THEN (261) 32 33
ELSE (262) 33
END (263) 27
FORWARD (264) 16
FUNCTION (265) 17 19
OUTPUT (266) 2
PARAMSTR (267) 36
REPEAT (268) 35
UNTIL (269) 35
VAR (270) 4 25
VAL (271) 36
WHILE (272) 34
WRITELN (273) 38
PROGRAM (274) 2
ASSIGN (275) 37
NOT (276) 55
OR (277) 50
MULTOP (278) 53
ADDOP (279) 48 49
RELATIONALOP (280) 47
ID (281) 2 8 9 10 17 19 24 25 36 37 58 59
STRING (282) 45
INTEGER (283) 56
REAL (284) 57
RESERVED (285)


Não-terminais, com as regras aonde aparecem

$accept (37)
    à esquerda: 0
Prog (38)
    à esquerda: 1, à direita: 0
ProgHeading (39)
    à esquerda: 2, à direita: 1
ProgBlock (40)
    à esquerda: 3, à direita: 1
varPart (41)
    à esquerda: 4 5, à direita: 3 17 18
VarDeclarationRepeat (42)
    à esquerda: 6 7, à direita: 4 6
VarDeclaration (43)
    à esquerda: 8, à direita: 4 6
IDList (44)
    à esquerda: 9, à direita: 8 24 25
IDListRepeat (45)
    à esquerda: 10 11, à direita: 9 10
funcPart (46)
    à esquerda: 12 13, à direita: 3
FuncDeclRepeat (47)
    à esquerda: 14 15, à direita: 12 14
FuncDeclaration (48)
    à esquerda: 16 17 18, à direita: 12 14
FuncHeading (49)
    à esquerda: 19, à direita: 16 18
FormalParamList (50)
    à esquerda: 20 21, à direita: 19
FormalParamListRepeat (51)
    à esquerda: 22 23, à direita: 20 22
FormalParams (52)
    à esquerda: 24 25, à direita: 20 22
StatPart (53)
    à esquerda: 26, à direita: 3 17 18
CompStat (54)
    à esquerda: 27, à direita: 26 31
StatList (55)
    à esquerda: 28, à direita: 27 35
StatListRepeat (56)
    à esquerda: 29 30, à direita: 28 29
Stat (57)
    à esquerda: 31 32 33 34 35 36 37 38 39, à direita: 28 29 32 33
    34
WriteInPList (58)
    à esquerda: 40 41, à direita: 38
WriteInPListOptional (59)
    à esquerda: 42 43, à direita: 40 42
Optional (60)
    à esquerda: 44 45, à direita: 40 42
Expr (61)
    à esquerda: 46 47, à direita: 32 33 34 35 36 37 44 54 60 61
SimpleExpr (62)
    à esquerda: 48 49 50 51, à direita: 46 47 49 50
Term (63)
    à esquerda: 52 53, à direita: 48 49 50 51 53
Factor (64)
    à esquerda: 54 55 56 57 58 59, à direita: 52 53 55
ParamList (65)
    à esquerda: 60, à direita: 59
ParamListOptional (66)
    à esquerda: 61 62, à direita: 60 61


State 0

    0 $accept: . Prog $end

    PROGRAM  fazer shift, e ir para o estado 1

    Prog         ir para o estado 2
    ProgHeading  ir para o estado 3


State 1

    2 ProgHeading: PROGRAM . ID '(' OUTPUT ')'

    ID  fazer shift, e ir para o estado 4


State 2

    0 $accept: Prog . $end

    $end  fazer shift, e ir para o estado 5


State 3

    1 Prog: ProgHeading . ';' ProgBlock '.'

    ';'  fazer shift, e ir para o estado 6


State 4

    2 ProgHeading: PROGRAM ID . '(' OUTPUT ')'

    '('  fazer shift, e ir para o estado 7


State 5

    0 $accept: Prog $end .

    $default  aceite


State 6

    1 Prog: ProgHeading ';' . ProgBlock '.'

    VAR  fazer shift, e ir para o estado 8

    $default  reduzir usando a regra 5 (varPart)

    ProgBlock  ir para o estado 9
    varPart    ir para o estado 10


State 7

    2 ProgHeading: PROGRAM ID '(' . OUTPUT ')'

    OUTPUT  fazer shift, e ir para o estado 11


State 8

    4 varPart: VAR . VarDeclaration ';' VarDeclarationRepeat

    ID  fazer shift, e ir para o estado 12

    VarDeclaration  ir para o estado 13
    IDList          ir para o estado 14


State 9

    1 Prog: ProgHeading ';' ProgBlock . '.'

    '.'  fazer shift, e ir para o estado 15


State 10

    3 ProgBlock: varPart . funcPart StatPart

    FUNCTION  fazer shift, e ir para o estado 16

    $default  reduzir usando a regra 13 (funcPart)

    funcPart         ir para o estado 17
    FuncDeclaration  ir para o estado 18
    FuncHeading      ir para o estado 19


State 11

    2 ProgHeading: PROGRAM ID '(' OUTPUT . ')'

    ')'  fazer shift, e ir para o estado 20


State 12

    9 IDList: ID . IDListRepeat

    ','  fazer shift, e ir para o estado 21

    $default  reduzir usando a regra 11 (IDListRepeat)

    IDListRepeat  ir para o estado 22


State 13

    4 varPart: VAR VarDeclaration . ';' VarDeclarationRepeat

    ';'  fazer shift, e ir para o estado 23


State 14

    8 VarDeclaration: IDList . ':' ID

    ':'  fazer shift, e ir para o estado 24


State 15

    1 Prog: ProgHeading ';' ProgBlock '.' .

    $default  reduzir usando a regra 1 (Prog)


State 16

   17 FuncDeclaration: FUNCTION . ID ';' varPart StatPart
   19 FuncHeading: FUNCTION . ID FormalParamList ':' ID

    ID  fazer shift, e ir para o estado 25


State 17

    3 ProgBlock: varPart funcPart . StatPart

    BEG  fazer shift, e ir para o estado 26

    StatPart  ir para o estado 27
    CompStat  ir para o estado 28


State 18

   12 funcPart: FuncDeclaration . ';' FuncDeclRepeat

    ';'  fazer shift, e ir para o estado 29


State 19

   16 FuncDeclaration: FuncHeading . ';' FORWARD
   18                | FuncHeading . ';' varPart StatPart

    ';'  fazer shift, e ir para o estado 30


State 20

    2 ProgHeading: PROGRAM ID '(' OUTPUT ')' .

    $default  reduzir usando a regra 2 (ProgHeading)


State 21

   10 IDListRepeat: ',' . ID IDListRepeat

    ID  fazer shift, e ir para o estado 31


State 22

    9 IDList: ID IDListRepeat .

    $default  reduzir usando a regra 9 (IDList)


State 23

    4 varPart: VAR VarDeclaration ';' . VarDeclarationRepeat

    ID  fazer shift, e ir para o estado 12

    $default  reduzir usando a regra 7 (VarDeclarationRepeat)

    VarDeclarationRepeat  ir para o estado 32
    VarDeclaration        ir para o estado 33
    IDList                ir para o estado 14


State 24

    8 VarDeclaration: IDList ':' . ID

    ID  fazer shift, e ir para o estado 34


State 25

   17 FuncDeclaration: FUNCTION ID . ';' varPart StatPart
   19 FuncHeading: FUNCTION ID . FormalParamList ':' ID

    ';'  fazer shift, e ir para o estado 35
    '('  fazer shift, e ir para o estado 36

    $default  reduzir usando a regra 21 (FormalParamList)

    FormalParamList  ir para o estado 37


State 26

   27 CompStat: BEG . StatList END

    BEG      fazer shift, e ir para o estado 26
    IF       fazer shift, e ir para o estado 38
    REPEAT   fazer shift, e ir para o estado 39
    VAL      fazer shift, e ir para o estado 40
    WHILE    fazer shift, e ir para o estado 41
    WRITELN  fazer shift, e ir para o estado 42
    ID       fazer shift, e ir para o estado 43

    $default  reduzir usando a regra 39 (Stat)

    CompStat  ir para o estado 44
    StatList  ir para o estado 45
    Stat      ir para o estado 46


State 27

    3 ProgBlock: varPart funcPart StatPart .

    $default  reduzir usando a regra 3 (ProgBlock)


State 28

   26 StatPart: CompStat .

    $default  reduzir usando a regra 26 (StatPart)


State 29

   12 funcPart: FuncDeclaration ';' . FuncDeclRepeat

    FUNCTION  fazer shift, e ir para o estado 16

    $default  reduzir usando a regra 15 (FuncDeclRepeat)

    FuncDeclRepeat   ir para o estado 47
    FuncDeclaration  ir para o estado 48
    FuncHeading      ir para o estado 19


State 30

   16 FuncDeclaration: FuncHeading ';' . FORWARD
   18                | FuncHeading ';' . varPart StatPart

    FORWARD  fazer shift, e ir para o estado 49
    VAR      fazer shift, e ir para o estado 8

    $default  reduzir usando a regra 5 (varPart)

    varPart  ir para o estado 50


State 31

   10 IDListRepeat: ',' ID . IDListRepeat

    ','  fazer shift, e ir para o estado 21

    $default  reduzir usando a regra 11 (IDListRepeat)

    IDListRepeat  ir para o estado 51


State 32

    4 varPart: VAR VarDeclaration ';' VarDeclarationRepeat .

    $default  reduzir usando a regra 4 (varPart)


State 33

    6 VarDeclarationRepeat: VarDeclaration . ';' VarDeclarationRepeat

    ';'  fazer shift, e ir para o estado 52


State 34

    8 VarDeclaration: IDList ':' ID .

    $default  reduzir usando a regra 8 (VarDeclaration)


State 35

   17 FuncDeclaration: FUNCTION ID ';' . varPart StatPart

    VAR  fazer shift, e ir para o estado 8

    $default  reduzir usando a regra 5 (varPart)

    varPart  ir para o estado 53


State 36

   20 FormalParamList: '(' . FormalParams FormalParamListRepeat ')'

    VAR  fazer shift, e ir para o estado 54
    ID   fazer shift, e ir para o estado 12

    IDList        ir para o estado 55
    FormalParams  ir para o estado 56


State 37

   19 FuncHeading: FUNCTION ID FormalParamList . ':' ID

    ':'  fazer shift, e ir para o estado 57


State 38

   32 Stat: IF . Expr THEN Stat
   33     | IF . Expr THEN Stat ELSE Stat

    NOT      fazer shift, e ir para o estado 58
    ADDOP    fazer shift, e ir para o estado 59
    ID       fazer shift, e ir para o estado 60
    INTEGER  fazer shift, e ir para o estado 61
    REAL     fazer shift, e ir para o estado 62
    '('      fazer shift, e ir para o estado 63

    Expr        ir para o estado 64
    SimpleExpr  ir para o estado 65
    Term        ir para o estado 66
    Factor      ir para o estado 67


State 39

   35 Stat: REPEAT . StatList UNTIL Expr

    BEG      fazer shift, e ir para o estado 26
    IF       fazer shift, e ir para o estado 38
    REPEAT   fazer shift, e ir para o estado 39
    VAL      fazer shift, e ir para o estado 40
    WHILE    fazer shift, e ir para o estado 41
    WRITELN  fazer shift, e ir para o estado 42
    ID       fazer shift, e ir para o estado 43

    $default  reduzir usando a regra 39 (Stat)

    CompStat  ir para o estado 44
    StatList  ir para o estado 68
    Stat      ir para o estado 46


State 40

   36 Stat: VAL . '(' PARAMSTR '(' Expr ')' ',' ID ')'

    '('  fazer shift, e ir para o estado 69


State 41

   34 Stat: WHILE . Expr DO Stat

    NOT      fazer shift, e ir para o estado 58
    ADDOP    fazer shift, e ir para o estado 59
    ID       fazer shift, e ir para o estado 60
    INTEGER  fazer shift, e ir para o estado 61
    REAL     fazer shift, e ir para o estado 62
    '('      fazer shift, e ir para o estado 63

    Expr        ir para o estado 70
    SimpleExpr  ir para o estado 65
    Term        ir para o estado 66
    Factor      ir para o estado 67


State 42

   38 Stat: WRITELN . WriteInPList

    '('  fazer shift, e ir para o estado 71

    $default  reduzir usando a regra 41 (WriteInPList)

    WriteInPList  ir para o estado 72


State 43

   37 Stat: ID . ASSIGN Expr

    ASSIGN  fazer shift, e ir para o estado 73


State 44

   31 Stat: CompStat .

    $default  reduzir usando a regra 31 (Stat)


State 45

   27 CompStat: BEG StatList . END

    END  fazer shift, e ir para o estado 74


State 46

   28 StatList: Stat . StatListRepeat

    ';'  fazer shift, e ir para o estado 75

    $default  reduzir usando a regra 30 (StatListRepeat)

    StatListRepeat  ir para o estado 76


State 47

   12 funcPart: FuncDeclaration ';' FuncDeclRepeat .

    $default  reduzir usando a regra 12 (funcPart)


State 48

   14 FuncDeclRepeat: FuncDeclaration . ';' FuncDeclRepeat

    ';'  fazer shift, e ir para o estado 77


State 49

   16 FuncDeclaration: FuncHeading ';' FORWARD .

    $default  reduzir usando a regra 16 (FuncDeclaration)


State 50

   18 FuncDeclaration: FuncHeading ';' varPart . StatPart

    BEG  fazer shift, e ir para o estado 26

    StatPart  ir para o estado 78
    CompStat  ir para o estado 28


State 51

   10 IDListRepeat: ',' ID IDListRepeat .

    $default  reduzir usando a regra 10 (IDListRepeat)


State 52

    6 VarDeclarationRepeat: VarDeclaration ';' . VarDeclarationRepeat

    ID  fazer shift, e ir para o estado 12

    $default  reduzir usando a regra 7 (VarDeclarationRepeat)

    VarDeclarationRepeat  ir para o estado 79
    VarDeclaration        ir para o estado 33
    IDList                ir para o estado 14


State 53

   17 FuncDeclaration: FUNCTION ID ';' varPart . StatPart

    BEG  fazer shift, e ir para o estado 26

    StatPart  ir para o estado 80
    CompStat  ir para o estado 28


State 54

   25 FormalParams: VAR . IDList ':' ID

    ID  fazer shift, e ir para o estado 12

    IDList  ir para o estado 81


State 55

   24 FormalParams: IDList . ':' ID

    ':'  fazer shift, e ir para o estado 82


State 56

   20 FormalParamList: '(' FormalParams . FormalParamListRepeat ')'

    ';'  fazer shift, e ir para o estado 83

    $default  reduzir usando a regra 23 (FormalParamListRepeat)

    FormalParamListRepeat  ir para o estado 84


State 57

   19 FuncHeading: FUNCTION ID FormalParamList ':' . ID

    ID  fazer shift, e ir para o estado 85


State 58

   55 Factor: NOT . Factor

    NOT      fazer shift, e ir para o estado 58
    ID       fazer shift, e ir para o estado 60
    INTEGER  fazer shift, e ir para o estado 61
    REAL     fazer shift, e ir para o estado 62
    '('      fazer shift, e ir para o estado 63

    Factor  ir para o estado 86


State 59

   48 SimpleExpr: ADDOP . Term

    NOT      fazer shift, e ir para o estado 58
    ID       fazer shift, e ir para o estado 60
    INTEGER  fazer shift, e ir para o estado 61
    REAL     fazer shift, e ir para o estado 62
    '('      fazer shift, e ir para o estado 63

    Term    ir para o estado 87
    Factor  ir para o estado 67


State 60

   58 Factor: ID .
   59       | ID . ParamList

    '('  fazer shift, e ir para o estado 88

    $default  reduzir usando a regra 58 (Factor)

    ParamList  ir para o estado 89


State 61

   56 Factor: INTEGER .

    $default  reduzir usando a regra 56 (Factor)


State 62

   57 Factor: REAL .

    $default  reduzir usando a regra 57 (Factor)


State 63

   54 Factor: '(' . Expr ')'

    NOT      fazer shift, e ir para o estado 58
    ADDOP    fazer shift, e ir para o estado 59
    ID       fazer shift, e ir para o estado 60
    INTEGER  fazer shift, e ir para o estado 61
    REAL     fazer shift, e ir para o estado 62
    '('      fazer shift, e ir para o estado 63

    Expr        ir para o estado 90
    SimpleExpr  ir para o estado 65
    Term        ir para o estado 66
    Factor      ir para o estado 67


State 64

   32 Stat: IF Expr . THEN Stat
   33     | IF Expr . THEN Stat ELSE Stat

    THEN  fazer shift, e ir para o estado 91


State 65

   46 Expr: SimpleExpr .
   47     | SimpleExpr . RELATIONALOP SimpleExpr
   49 SimpleExpr: SimpleExpr . ADDOP Term
   50           | SimpleExpr . OR Term

    OR            fazer shift, e ir para o estado 92
    ADDOP         fazer shift, e ir para o estado 93
    RELATIONALOP  fazer shift, e ir para o estado 94

    $default  reduzir usando a regra 46 (Expr)


State 66

   51 SimpleExpr: Term .
   53 Term: Term . MULTOP Factor

    MULTOP  fazer shift, e ir para o estado 95

    $default  reduzir usando a regra 51 (SimpleExpr)


State 67

   52 Term: Factor .

    $default  reduzir usando a regra 52 (Term)


State 68

   35 Stat: REPEAT StatList . UNTIL Expr

    UNTIL  fazer shift, e ir para o estado 96


State 69

   36 Stat: VAL '(' . PARAMSTR '(' Expr ')' ',' ID ')'

    PARAMSTR  fazer shift, e ir para o estado 97


State 70

   34 Stat: WHILE Expr . DO Stat

    DO  fazer shift, e ir para o estado 98


State 71

   40 WriteInPList: '(' . Optional WriteInPListOptional ')'

    NOT      fazer shift, e ir para o estado 58
    ADDOP    fazer shift, e ir para o estado 59
    ID       fazer shift, e ir para o estado 60
    STRING   fazer shift, e ir para o estado 99
    INTEGER  fazer shift, e ir para o estado 61
    REAL     fazer shift, e ir para o estado 62
    '('      fazer shift, e ir para o estado 63

    Optional    ir para o estado 100
    Expr        ir para o estado 101
    SimpleExpr  ir para o estado 65
    Term        ir para o estado 66
    Factor      ir para o estado 67


State 72

   38 Stat: WRITELN WriteInPList .

    $default  reduzir usando a regra 38 (Stat)


State 73

   37 Stat: ID ASSIGN . Expr

    NOT      fazer shift, e ir para o estado 58
    ADDOP    fazer shift, e ir para o estado 59
    ID       fazer shift, e ir para o estado 60
    INTEGER  fazer shift, e ir para o estado 61
    REAL     fazer shift, e ir para o estado 62
    '('      fazer shift, e ir para o estado 63

    Expr        ir para o estado 102
    SimpleExpr  ir para o estado 65
    Term        ir para o estado 66
    Factor      ir para o estado 67


State 74

   27 CompStat: BEG StatList END .

    $default  reduzir usando a regra 27 (CompStat)


State 75

   29 StatListRepeat: ';' . Stat StatListRepeat

    BEG      fazer shift, e ir para o estado 26
    IF       fazer shift, e ir para o estado 38
    REPEAT   fazer shift, e ir para o estado 39
    VAL      fazer shift, e ir para o estado 40
    WHILE    fazer shift, e ir para o estado 41
    WRITELN  fazer shift, e ir para o estado 42
    ID       fazer shift, e ir para o estado 43

    $default  reduzir usando a regra 39 (Stat)

    CompStat  ir para o estado 44
    Stat      ir para o estado 103


State 76

   28 StatList: Stat StatListRepeat .

    $default  reduzir usando a regra 28 (StatList)


State 77

   14 FuncDeclRepeat: FuncDeclaration ';' . FuncDeclRepeat

    FUNCTION  fazer shift, e ir para o estado 16

    $default  reduzir usando a regra 15 (FuncDeclRepeat)

    FuncDeclRepeat   ir para o estado 104
    FuncDeclaration  ir para o estado 48
    FuncHeading      ir para o estado 19


State 78

   18 FuncDeclaration: FuncHeading ';' varPart StatPart .

    $default  reduzir usando a regra 18 (FuncDeclaration)


State 79

    6 VarDeclarationRepeat: VarDeclaration ';' VarDeclarationRepeat .

    $default  reduzir usando a regra 6 (VarDeclarationRepeat)


State 80

   17 FuncDeclaration: FUNCTION ID ';' varPart StatPart .

    $default  reduzir usando a regra 17 (FuncDeclaration)


State 81

   25 FormalParams: VAR IDList . ':' ID

    ':'  fazer shift, e ir para o estado 105


State 82

   24 FormalParams: IDList ':' . ID

    ID  fazer shift, e ir para o estado 106


State 83

   22 FormalParamListRepeat: ';' . FormalParams FormalParamListRepeat

    VAR  fazer shift, e ir para o estado 54
    ID   fazer shift, e ir para o estado 12

    IDList        ir para o estado 55
    FormalParams  ir para o estado 107


State 84

   20 FormalParamList: '(' FormalParams FormalParamListRepeat . ')'

    ')'  fazer shift, e ir para o estado 108


State 85

   19 FuncHeading: FUNCTION ID FormalParamList ':' ID .

    $default  reduzir usando a regra 19 (FuncHeading)


State 86

   55 Factor: NOT Factor .

    $default  reduzir usando a regra 55 (Factor)


State 87
